Add JavaFX to the project